force-app/main/default/objects/Quote/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>IF(
TEXT(ApprovalStatus__c) = &apos;Pending&apos;,
IMAGE(&quot;/resource/1573112823000/TAR_App_Pending&quot;, &quot;Approval Pending&quot;,20,100),
IF(
TEXT(ApprovalStatus__c) = &apos;Approved&apos;,
IMAGE(&quot;/resource/1575458290000/TAR_IMG_Approved&quot;, &quot;Approved&quot;,30,100),
IF(
TEXT(ApprovalStatus__c) = &apos;Rejected&apos;,
IMAGE(&quot;/resource/1575458290000/TAR_IMG_Rejected&quot;, &quot;Rejected&quot;,45,120),
IF(
TEXT(ApprovalStatus__c) = &apos;Not Submitted&apos;,
IMAGE(&quot;/resource/1575458234000/TAR_App_NotSubmitted&quot;, &quot;Not Submitted&quot;,30,100),IMAGE(&quot;/resource/1574351176000/TAR_App_NotSubmitted&quot;, &quot;Not Submitted&quot;,30,130)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>