force-app/main/default/objects/Quote/fields/Customer_Service_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Formula__c</fullName>
    <label>Customer Service Formula</label>
    <summarizedField>QuoteLineItem.Customer_Service_Formula__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>