force-app/main/default/objects/Quote/fields/DateClosed__c.field-meta.xml
<CustomField>
    <fullName>DateClosed__c</fullName>
    <label>Date/Time Closed</label>
    <type>Date</type>
</CustomField>