force-app/main/default/objects/Quote/fields/End_Of_Validity__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Validity__c</fullName>
    <label>End Of Validity</label>
    <type>Date</type>
</CustomField>