force-app/main/default/objects/Quote/fields/Imerys_Selling_Entity_For_Template__c.field-meta.xml
<CustomField>
    <fullName>Imerys_Selling_Entity_For_Template__c</fullName>
    <description>Imerys selling Entity for template</description>
    <formula>RIGHT((ImerysSellingEntity1__r.Name), (LEN( ImerysSellingEntity1__r.Name)-5))</formula>
    <label>Imerys Selling Entity</label>
    <type>Text</type>
</CustomField>