force-app/main/default/objects/Quote/fields/ImerysSellingEntityAddress1__c.field-meta.xml
<CustomField>
    <fullName>ImerysSellingEntityAddress1__c</fullName>
    <formula>ImerysSellingEntity1__r.Street__c &amp;&quot; &quot; + ImerysSellingEntity1__r.ZipPostalCode__c &amp; &quot; &quot;</formula>
    <label>Imerys Selling Entity Street</label>
    <type>Text</type>
</CustomField>