force-app/main/default/objects/Quote/fields/ImerysSellingEntityCity1__c.field-meta.xml
<CustomField>
    <fullName>ImerysSellingEntityCity1__c</fullName>
    <formula>ImerysSellingEntity1__r.City__c</formula>
    <label>Imerys Selling Entity City</label>
    <type>Text</type>
</CustomField>