force-app/main/default/objects/Quote/fields/ImerysSellingEntityCountry1__c.field-meta.xml
<CustomField>
    <fullName>ImerysSellingEntityCountry1__c</fullName>
    <formula>ImerysSellingEntity1__r.Country__c</formula>
    <label>Imerys Selling Entity Country</label>
    <type>Text</type>
</CustomField>