force-app/main/default/objects/Quote/fields/N_1__c.field-meta.xml
<CustomField>
    <fullName>N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N+1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>