force-app/main/default/objects/Quote/fields/Product_Percent_Completion__c.field-meta.xml
<CustomField>
    <fullName>Product_Percent_Completion__c</fullName>
    <formula>Product_Formula__c/IF(LineItemCount &gt; 0,(LineItemCount * 5),1)</formula>
    <inlineHelpText>Represent the completion rate of mandatory fields in the product details/product information</inlineHelpText>
    <label>Product Information Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>