force-app/main/default/objects/Quote/fields/ReasonForClosing__c.field-meta.xml
<CustomField>
    <fullName>ReasonForClosing__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Quote accepted</fullName>
            </value>
            <value>
                <fullName>Quote rejected</fullName>
            </value>
            <value>
                <fullName>Quote canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>