force-app/main/default/objects/Quote/fields/Sent_to_Customer_Service_Completion__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Customer_Service_Completion__c</fullName>
    <formula>Customer_Service_Formula__c/IF(LineItemCount &gt; 0,(LineItemCount),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the completion rate of sending the pricing information per product to customer service through the price update button</inlineHelpText>
    <label>Sent to Customer Service Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>