force-app/main/default/objects/Quote/fields/Standard_Terms_Conditions_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Standard_Terms_Conditions_of_Sales__c</fullName>
    <formula>ImerysSellingEntity1__r.Standard_Terms_Conditions_of_Sales_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>General Terms of Supply and Delivery</label>
    <type>Text</type>
</CustomField>