force-app/main/default/objects/Quote/fields/Start_of_Validity__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Validity__c</fullName>
    <label>Start of Validity</label>
    <type>Date</type>
</CustomField>