force-app/main/default/objects/Quote/fields/Welcoming__c.field-meta.xml
<CustomField>
    <fullName>Welcoming__c</fullName>
    <defaultValue>&quot;Following our recent conversation, we have the pleasure of confirming our offering as below.&quot;</defaultValue>
    <label>Welcoming</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>