force-app/main/default/objects/Quote/validationRules/QUO_VR04_ValidityDateMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>QUO_VR04_ValidityDateMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &apos;Quote finalization&apos;) &amp;&amp;
ISNULL(ValidityDate__c) &amp;&amp; NOT(ISPICKVAL(ReasonForClosing__c,&apos;Quote canceled&apos;))</errorConditionFormula>
    <errorMessage>Quote Expiration Date is mandatory to proceed to stage &apos;Price definition and approval&apos;</errorMessage>
</ValidationRule>