force-app/main/default/objects/Quote/validationRules/QUO_VR06_PaymentFieldsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>QUO_VR06_PaymentFieldsMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &apos;Quote finalization&apos;) &amp;&amp;
(ISPICKVAL(PaymentMethod__c,&apos;&apos;)||
ISPICKVAL(PaymentTerm__c,&apos;&apos;)||
ISPICKVAL(PaymentTermSubcategory__c,&apos;&apos;)
) &amp;&amp; NOT(ISPICKVAL(ReasonForClosing__c,&apos;Quote canceled&apos;))</errorConditionFormula>
    <errorMessage>Payment Method, Payment term and Payment term sub category are mandatory to proceed to stage &apos;Quote Finalization&apos;.</errorMessage>
</ValidationRule>