force-app/main/default/objects/Quote/validationRules/QUO_VR11_ValidityDateMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>QUO_VR11_ValidityDateMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status,&apos;Quote finalization&apos;) &amp;&amp;
ISPICKVAL(PRIORVALUE( Status),&apos;Price definition and approval&apos;)&amp;&amp;
ISBLANK(ValidityDate__c)&amp;&amp;
NOT(ISPICKVAL(ReasonForClosing__c,&apos;Quote canceled&apos;)) &amp;&amp;
$User.ByPassValidationRule__c = False</errorConditionFormula>
    <errorMessage>Quote Expiration Date is mandatory to proceed to stage &apos;Quote Finalization&apos;</errorMessage>
</ValidationRule>