force-app/main/default/objects/Quote/validationRules/QUO_VR13_QuoteLifecycle.validationRule-meta.xml
<ValidationRule>
    <fullName>QUO_VR13_QuoteLifecycle</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Status ),
CASE(Status ,
&quot;Quote Initialization&quot;,1,
&quot;Quote finalization&quot;,2,
0)
&gt;
(CASE( PRIORVALUE( Status ),
&quot;Quote Initialization&quot;,1,
&quot;Quote finalization&quot;,2,
&quot;Closed&quot;,3,
0)+ 1 )
)

||

(

ISCHANGED( Status ) &amp;&amp;
ISPICKVAL(PRIORVALUE( Status ),&apos;Quote Initialization&apos;) &amp;&amp;
ISPICKVAL(Status,&apos;Closed&apos;) &amp;&amp;
NOT(ISPICKVAL(ReasonForClosing__c,&apos;Quote canceled&apos;))
)</errorConditionFormula>
    <errorMessage>You cannot skip stage, please follow the Quote lifecycle.</errorMessage>
</ValidationRule>