force-app/main/default/objects/Quote/validationRules/QUO_VR14_QuotePendingApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>QUO_VR14_QuotePendingApproval</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status,&apos;Quote finalization&apos;) &amp;&amp;
(ISPICKVAL(ApprovalStatus__c, &apos;Pending&apos;) || ISPICKVAL(ApprovalStatus__c, &apos;Rejected&apos;)) &amp;&amp;
 $User.ByPassValidationRule__c  = False &amp;&amp;
NOT(ISPICKVAL(ReasonForClosing__c,&apos;Quote canceled&apos;))</errorConditionFormula>
    <errorMessage>You cannot reach Quote finalization with a Pending/Rejected approval.</errorMessage>
</ValidationRule>