force-app/main/default/objects/Quote/validationRules/QUO_VR16_ImerysSellingEntity.validationRule-meta.xml
<ValidationRule>
    <fullName>QUO_VR16_ImerysSellingEntity</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Status,&apos;Quote initialization&apos;)) &amp;&amp;
RecordType.DeveloperName = &apos;Quote_After_Creation&apos; &amp;&amp;
ISBLANK(ImerysSellingEntity1__c)</errorConditionFormula>
    <errorDisplayField>ImerysSellingEntity1__c</errorDisplayField>
    <errorMessage>You cannot reach Price definition and approval without filling out &apos;Imerys Selling Entity&apos;.</errorMessage>
</ValidationRule>